--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <body style="margin: 0; width: 100vw; height: 100vh; overflow: hidden;">
         <canvas style="margin: 0; border: 0; width: 100vw; height: 100vh; "></canvas>
+        <p id="debugText" style="position: absolute; z-index: 1; top: 20; left: 20; color: white;"></p>
 
         <script src="game-logic.js"></script>
         <script src="matrix-math.js"></script>
