--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
 
             #debugText {
                 position: absolute;
-                z-index: 1;
-                top: 20;
-                left: 20;
+                padding: 0.5em;
+                bottom: 0;
+                left: 0;
+                margin: 0;
                 color: white;
                 background-color: rgba(0, 0, 0, 0.25);
                 white-space: pre;
