--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 height: 100vh;
             }
 
-            #debugText {
+            #debug-text {
                 position: absolute;
                 padding: 0.5em;
                 bottom: 0;
@@ -33,12 +33,51 @@
                 -ms-user-select: none;
                 user-select: none;
             }
+
+            #object-properties {
+                position: absolute;
+                padding: 0.5em;
+                top: 0;
+                left: 0;
+                margin: 0;
+            }
+
+            form {
+                background-color: darkorange;
+            }
+
+            form.hidden {
+                display: none;
+            }
+
+            label {
+                display: inline-block;
+                width: 2em;
+                box-sizing: border-box;
+            }
+
+            @media only screen and (max-width: 600px) {
+                form, #debug-text {
+                    display: none;
+                }
+            }
         </style>
     </head>
 
     <body>
         <canvas></canvas>
-        <p id="debugText"></p>
+        <p id="debug-text"></p>
+
+        <form id="object-properties" class="hidden">
+            <select id="object-list">
+                <option value="body-of-water">Water</option>
+                <option value="polygon-obstacle">Obstacle</option>
+            </select>
+            <button type="button" id="spawn-object">Spawn</button><br><br>
+            <label for="x">x</label> <input id="x" autocomplete="off" type="number"> <br>
+            <label for="y">y</label> <input id="y" autocomplete="off" type="number"> <br>
+            <label for="size">size</label> <input id="size" autocomplete="off" type="number"> <br>
+        </form>
 
         <script src="game-logic.js"></script>
         <script src="matrix-math.js"></script>
