--- a/index.html
+++ b/index.html
@@ -1,87 +1,46 @@
 <html>
-    <head>
-        <title>Flinger</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <style>
-            body {
-                margin: 0;
-                width: 100vw;
-                height: 100vh;
-                overflow: hidden;
-            }
+<head>
+    <title>Flinger</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-            canvas {
-                margin: 0;
-                border: 0;
-                width: 100vw;
-                height: 100vh;
-            }
+    <style>
+        body {
+            margin: 0;
+            width: 100vw;
+            height: 100vh;
+            overflow: hidden;
+        }
 
-            #debug-text {
-                position: absolute;
-                padding: 0.5em;
-                bottom: 0;
-                left: 0;
-                margin: 0;
-                color: white;
-                background-color: rgba(0, 0, 0, 0.25);
-                white-space: pre;
-                -webkit-user-select: none;
-                -moz-user-select: none;
-                -ms-user-select: none;
-                user-select: none;
-            }
+        canvas {
+            margin: 0;
+            border: 0;
+            width: 100vw;
+            height: 100vh;
+        }
 
-            #object-properties {
-                position: absolute;
-                padding: 0.5em;
-                top: 0;
-                left: 0;
-                margin: 0;
-            }
+        #debugText {
+            position: absolute;
+            padding: 0.5em;
+            bottom: 0;
+            left: 0;
+            margin: 0;
+            color: white;
+            background-color: rgba(0, 0, 0, 0.25);
+            white-space: pre;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+        }
+    </style>
+</head>
 
-            form {
-                background-color: darkorange;
-            }
+<body>
+    <canvas></canvas>
+    <p id="debugText"></p>
+    <script type="module" src="main.mjs"></script>
+</body>
 
-            form.hidden {
-                display: none;
-            }
-
-            label {
-                display: inline-block;
-                width: 2em;
-                box-sizing: border-box;
-            }
-
-            @media only screen and (max-width: 600px) {
-                form, #debug-text {
-                    display: none;
-                }
-            }
-        </style>
-    </head>
-
-    <body>
-        <canvas></canvas>
-        <p id="debug-text"></p>
-
-        <form id="object-properties" class="hidden">
-            <select id="object-list">
-                <option value="body-of-water">Water</option>
-                <option value="polygon-obstacle">Obstacle</option>
-            </select>
-            <button type="button" id="spawn-object">Spawn</button><br><br>
-            <label for="x">x</label> <input id="x" autocomplete="off" type="number"> <br>
-            <label for="y">y</label> <input id="y" autocomplete="off" type="number"> <br>
-            <label for="size">size</label> <input id="size" autocomplete="off" type="number"> <br>
-        </form>
-
-        <script src="game-logic.js"></script>
-        <script src="matrix-math.js"></script>
-        <script src="model-builder.js"></script>
-        <script src="main.js"></script>
-    </body>
 </html>
